css/style.css
@import url("https://fonts.googleapis.com/css2?family=Fugaz+One&family=Nunito&display=swap");

/* || RESET */
*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
img {
    display: block;
    max-width: 100%;
    height: auto;
}
input,
button,
textarea {
    font: inherit;
}

/* || VARIABLES */
:root {
    /* FONTS */
    --FF: "Nunito", sans-serif;
    --FF-HEADINGS: "Fugaz One", cursive;
    --FS: clamp(1rem, 2.2vh, 1.5rem);

    /* COLORS */
    --BGCOLOR: orange;
    --BGCOLOR-FADE: rgb(252, 220, 160);
    --BGIMAGE: linear-gradient(to bottom, var(--BGCOLOR), var(--BGCOLOR-FADE));
    --BODY-BGCOLOR: #fff;
    --FONT-COLOR: #000;
    --BORDER-COLOR: #333;
    --HIGHLIGHT-COLOR: rgb(51, 178, 51);
    --LINK-COLOR: #000;
    --LINK-HOVER: hsla(0, 0%, 0%, 0.6);
    --LINK-ACTIVE: orange;
    --HEADER-BGCOLOR: #000;
    --HEADER-COLOR: #fff;
    --NAV-BGCOLOR: #fff;
    --HERO-BGCOLOR: rgba(51, 178, 51, 0.75);
    --HERO-COLOR: #fff;

    /* BORDERS */
    --BORDERS: 1px solid var(--BORDER-COLOR);

    /* STANDARD PADDING */
    --PADDING-TB: 0.25em;
    --PADDING-SIDE: 2.5%;

    /* STANDARD MARGIN */
    --MARGIN: clamp(1em, 2.5vh, 1.5em) 0;
}

/* || UTILITY CLASSES */
.offscreen {
    position: absolute;
    left: -10000px;
}
.nowrap {
    white-space: nowrap;
}
.center {
    text-align: center;
}

/* || GENERAL STYLES */
html {
    scroll-behavior: smooth;
    font-size: var(--FS);
    font-family: var(--FF);
    background: var(--BGCOLOR);
    background-image: var(--BGIMAGE);
}
body {
    background: var(--BODY-BGCOLOR);
    color: var(--FONT-COLOR);
    min-height: 100vh;
    max-width: 800px;
    margin: 0 auto;
    border-left: var(--BORDERS);
    border-right: var(--BORDERS);
    box-shadow: 0 0 10px var(--BORDER-COLOR);
}
h1,
h2,
h3 {
    font-family: var(--FF-HEADINGS);
    letter-spacing: 0.1em;
}
h2,
h3 {
    margin-bottom: 1em;
    color: var(--HIGHLIGHT-COLOR);
}
p {
    line-height: 1.5;
}
a:any-link {
    color: var(--LINK-COLOR);
}
a:hover,
a:focus-visible {
    color: var(--LINK-HOVER);
}
a:active {
    color: var(--LINK-ACTIVE);
}

/* || HEADER */
.header {
    position: sticky;
    top: 0;
    z-index: 1;
}
.header__h1 {
    text-align: center;
    background: var(--HEADER-BGCOLOR);
    color: var(--HEADER-COLOR);
    padding: var(--PADDING-TB) var(--PADDING-SIDE);
}
.header__nav {
    background: var(--NAV-BGCOLOR);
    border-bottom: var(--BORDERS);
    font-weight: bold;
    box-shadow: 0 6px 5px -5px var(--BORDER-COLOR);
}
.header__ul {
    padding: var(--PADDING-TB) var(--PADDING-SIDE);
    list-style: none;
    display: flex;
    justify-content: space-evenly;
    gap: 1rem;
}

/* || HERO */
.hero {
    position: relative;
}
.hero__h2 {
    background: var(--HERO-BGCOLOR);
    color: var(--HERO-COLOR);
    padding: 0.25em 0.5em;
    letter-spacing: 0.1rem;
    text-shadow: 2px 2px 5px var(--BORDER-COLOR);
    position: absolute;
    top: -100px;
    left: 20px;
    animation: showWelcome 0.5s ease-in-out 1s forwards;
}

@keyframes showWelcome {
    0% {
        top: -20px;
        transform: skew(0deg, -5deg) scaleY(0);
    }
    80% {
        top: 30px;
        transform: skew(10deg, -5deg) scaleY(1.2);
    }
    100% {
        top: 20px;
        transform: skew(-10deg, -5deg) scaleY(1);
    }
}

/* || FOOTER */
.footer {
    position: sticky;
    bottom: 0;
    background: var(--HEADER-BGCOLOR);
    color: var(--HEADER-COLOR);
    padding: var(--PADDING-TB) var(--PADDING-SIDE);
    text-align: center;
}

/* || MAIN */
.main {
    padding: var(--PADDING-TB) var(--PADDING-SIDE);
}
.main__article {
    scroll-margin-top: 6.5rem;
    margin: var(--MARGIN);
}
.main__article:first-child {
    margin-top: 1em;
}
.main__article:last-child {
    min-height: calc(100vh - 20rem);
}

/* || ABOUT */
.about__trivia {
    margin: var(--MARGIN);
}
.about__trivia-answer {
    margin-top: 1em;
}

